force-app/main/default/objects/PDLM__Deliverable__c/PDLM__Deliverable__c.object-meta.xml
<CustomObject>
    <description>Used to track the status of tasks, milestones, and deliverables for product launches in Propel</description>
    <label>Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>