force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Actual_Start_Date__c</fullName>
    <description>When the task is actually started (status is changed from Not Started to a new value like In Progress or Complete).</description>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>