force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Baseline_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Baseline_Due_Date__c</fullName>
    <label>Baseline Finish Date</label>
    <type>Date</type>
</CustomField>