force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Baseline_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Baseline_Start_Date__c</fullName>
    <label>Baseline Start Date</label>
    <type>Date</type>
</CustomField>