force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Import_Order__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Import_Order__c</fullName>
    <description>Used by Project import feature ONLY, to construct correct Parent-Child relations between Activities</description>
    <label>Import Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>