force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Item__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>PDLM__Item__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>