force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Order_Padded__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Order_Padded__c</fullName>
    <description>Order Padded used for SOQL sorting while the Order used for WBS user interface.</description>
    <formula>if ( NOT(ISBLANK(PDLM__Project_Stage__r.PDLM__Stage_Order__c)), text(10 + PDLM__Project_Stage__r.PDLM__Stage_Order__c)&amp;&quot;.&quot;,&quot;0.&quot;)
&amp;
if ( NOT(ISBLANK(PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__c)),
text(1000 + PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Sibling_Order__c)&amp;&quot;.&quot;,&quot;&quot;)
&amp;
if ( NOT(ISBLANK(PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__c)),
text(1000 + PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Sibling_Order__c)&amp;&quot;.&quot;,&quot;&quot;)
&amp;
if ( NOT(ISBLANK(PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__c)),
text(1000 + PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Sibling_Order__c)&amp;&quot;.&quot;,&quot;&quot;)
&amp;
if ( NOT(ISBLANK(PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__c)),
text(1000 + PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Sibling_Order__c)&amp;&quot;.&quot;,&quot;&quot;)
&amp;
if ( NOT(ISBLANK(PDLM__Parent_Activity__r.PDLM__Parent_Activity__c)),
text(1000 + PDLM__Parent_Activity__r.PDLM__Parent_Activity__r.PDLM__Sibling_Order__c)&amp;&quot;.&quot;,&quot;&quot;)
&amp;
if ( NOT(ISBLANK(PDLM__Parent_Activity__c)),
text(1000 + PDLM__Parent_Activity__r.PDLM__Sibling_Order__c)&amp;&quot;.&quot;,&quot;&quot;)
&amp;text(1000 + PDLM__Sibling_Order__c)</formula>
    <label>Order Padded</label>
    <type>Text</type>
</CustomField>