force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Quality__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Quality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality</label>
    <referenceTo>PDLM__Quality__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>