force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Reminder_Event__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Reminder_Event__c</fullName>
    <label>Reminder Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>