force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Sibling_Order__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Sibling_Order__c</fullName>
    <label>Sibling Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>