force-app/main/default/objects/PDLM__Deliverable__c/fields/PDLM__Type__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Type__c</fullName>
    <description>This field represents the type of activity.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>