force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__Baseline_Due_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Baseline_Due_Date_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PDLM__Baseline_Due_Date__c != null, PDLM__Baseline_Start_Date__c != null, PDLM__Baseline_Due_Date__c &lt; PDLM__Baseline_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>PDLM__Baseline_Due_Date__c</errorDisplayField>
    <errorMessage>The baseline finish date needs to be a later date than the start date.</errorMessage>
</ValidationRule>