force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__Due_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Due_Date_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>PDLM__Due_Date__c &lt; PDLM__Start_Date__c</errorConditionFormula>
    <errorDisplayField>PDLM__Due_Date__c</errorDisplayField>
    <errorMessage>The finish date needs to be a later date than the start date.</errorMessage>
</ValidationRule>