force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__No_more_than_2_levels.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__No_more_than_2_levels</fullName>
    <active>true</active>
    <description>Error message to prevent creation of third level of activities</description>
    <errorConditionFormula>PDLM__Parent_Activity__r.PDLM__Parent_Activity__c != null</errorConditionFormula>
    <errorMessage>Cannot create more than 2 levels of Activities</errorMessage>
</ValidationRule>