force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__Reminder_Set_Up.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Reminder_Set_Up</fullName>
    <active>true</active>
    <errorConditionFormula>((ISNULL(PDLM__Reminder_Days__c) &amp;&amp; (!ISBLANK(TEXT(PDLM__Reminder_Event__c)) || !ISBLANK(TEXT(PDLM__Reminder_Field__c))) ) ||
(!ISNULL(PDLM__Reminder_Days__c) &amp;&amp; (ISBLANK(TEXT(PDLM__Reminder_Event__c)) || ISBLANK(TEXT(PDLM__Reminder_Field__c))) )) ||
(!ISNULL(PDLM__Reminder_Days__c) &amp;&amp; !ISPICKVAL(PDLM__Reminder__c, &apos;&apos;))</errorConditionFormula>
    <errorMessage>Please fill in a Simple Reminder OR enter the Reminder Days, Event and Field.</errorMessage>
</ValidationRule>