force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__Require_Due.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Require_Due</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( PDLM__Due_Date__c )</errorConditionFormula>
    <errorDisplayField>PDLM__Due_Date__c</errorDisplayField>
    <errorMessage>Finish Date is required</errorMessage>
</ValidationRule>