force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__Require_Phase.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Require_Phase</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( PDLM__Phase__c )</errorConditionFormula>
    <errorDisplayField>PDLM__Phase__c</errorDisplayField>
    <errorMessage>Phase is required</errorMessage>
</ValidationRule>