force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__Require_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Require_Start</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(PDLM__Start_Date__c)</errorConditionFormula>
    <errorDisplayField>PDLM__Start_Date__c</errorDisplayField>
    <errorMessage>Start Date is required</errorMessage>
</ValidationRule>