force-app/main/default/objects/PDLM__Deliverable__c/validationRules/PDLM__Two_Years_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Two_Years_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>PDLM__Duration__c &gt; 728</errorConditionFormula>
    <errorMessage>Max allowed duration is 2 Years</errorMessage>
</ValidationRule>