force-app/main/default/objects/PDLM__Deliverable__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Project__c</columns>
    <columns>PDLM__Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>