force-app/main/default/objects/PDLM__Deliverable__c/listViews/PDLM__Archived.listView-meta.xml
<ListView>
    <fullName>PDLM__Archived</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Archived__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Archived</label>
</ListView>