force-app/main/default/objects/PDLM__Deliverable__c/listViews/PDLM__Open_Activities_Assigned_to_Me.listView-meta.xml
<ListView>
    <fullName>PDLM__Open_Activities_Assigned_to_Me</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>PDLM__Assigned_To_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Open Activities Assigned to Me</label>
</ListView>